extends Control

@onready var peopleFullPlotContainer = %VBoxContainer/peoplePlotFull
@onready var moneyFullPlotContainer = %VBoxContainer/moneyPlotFull
@onready var oilFullPlotContainer = %VBoxContainer/oilPlotFull
@onready var energyFullPlotContainer = %VBoxContainer/energyPlotFull
@onready var volatilityFullPlotContainer = %VBoxContainer/peoplePlotFull
@onready var materialsFullPlotContainer = %VBoxContainer/moneyPlotFull
@onready var worldHealthFullPlotContainer = %VBoxContainer/oilPlotFull
@onready var environmentalIndexFullPlotContainer = %VBoxContainer/energyPlotFull

# Called when the node is added to the scene
func _ready():
	pass
